deleted manual notes and edited index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!--- Author: Dopplver
+      github/dopplver
+      organization: diezelnerds
+      date update: 2022dec23
+     -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -9,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Diezelnerds
+    <title>Diezelnerds webcover
     </title>
   </head>
   <body>
@@ -64,13 +69,7 @@ Ya:::::::::::::88888888888888 8:::::::::8 88888888888888:::::::::::::aP
         <div class="header-text">
           <h1 class="heading"> IN DEVELOPMENT </h1>
           <p class="header-paragraph">
-            
-██████╗░██╗███████╗███████╗███████╗██╗░░░░░███╗░░██╗███████╗██████╗░██████╗░░██████╗
-██╔══██╗██║██╔════╝╚════██║██╔════╝██║░░░░░████╗░██║██╔════╝██╔══██╗██╔══██╗██╔════╝
-██║░░██║██║█████╗░░░░███╔═╝█████╗░░██║░░░░░██╔██╗██║█████╗░░██████╔╝██║░░██║╚█████╗░
-██║░░██║██║██╔══╝░░██╔══╝░░██╔══╝░░██║░░░░░██║╚████║██╔══╝░░██╔══██╗██║░░██║░╚═══██╗
-██████╔╝██║███████╗███████╗███████╗███████╗██║░╚███║███████╗██║░░██║██████╔╝██████╔╝
-╚═════╝░╚═╝╚══════╝╚══════╝╚══════╝╚══════╝╚═╝░░╚══╝╚══════╝╚═╝░░╚═╝╚═════╝░╚═════╝░
+           <a href="http://www.diezelnerds.org">  𝕕𝕚𝕖𝕫𝕖𝕝𝕟𝕖𝕣𝕕𝕤 </a> 
           </p>
         </div>
         <img
