--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!--- Author: Dopplver
-      github/dopplver
-      organization: diezelnerds
-      date update: 2022dec23
-     -->
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -14,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Diezelnerds webcover
+    <title> progress page
     </title>
   </head>
   <body>
@@ -67,29 +63,27 @@ Ya:::::::::::::88888888888888 8:::::::::8 88888888888888:::::::::::::aP
       -->
       <header class="header center">
         <div class="header-text">
-          <h1 class="heading"> IN DEVELOPMENT </h1>
+          <h1 class="heading"> YOUR DESCRIPTION </h1>
           <p class="header-paragraph">
-           <a href="http://www.diezelnerds.org">  𝕕𝕚𝕖𝕫𝕖𝕝𝕟𝕖𝕣𝕕𝕤 </a> 
+           <a href=""> Link </a> 
           </p>
         </div>
         <img
-          src="images/air-balloon.png"
-          alt="Header Image"
-          class="header-image"
+          src=""
+          alt=""
+          class=""
         />
         <div class="logo">
           <h1>
-            <span class="center">D</span>
-            <span class="center">I</span>
-            <span class="center">E</span>
-            <span class="center">Z</span>
-            <span class="center">E</span>
-            <span class="center">L</span>
-            <span class="center">N</span>
-            <span class="center">E</span>
-            <span class="center">R</span>
-            <span class="center">D</span>
-            <span class="center">S</span>
+            <span class="center"></span>
+            <span class="center"></span>
+            <span class="center"></span> 
+            <span class="center"></span>
+            <span class="center"></span>
+            <span class="center"></span>
+            <span class="center"></span>
+            <span class="center"></span>
+            <span class="center"></span>
           </h1>
         </div>
       </header>
