--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Diezelnerds webcover
+    <title>alapollon webcover
     </title>
   </head>
   <body>
@@ -67,29 +67,28 @@ Ya:::::::::::::88888888888888 8:::::::::8 88888888888888:::::::::::::aP
       -->
       <header class="header center">
         <div class="header-text">
-          <h1 class="heading"> IN DEVELOPMENT </h1>
+          <h1 class="heading"> IN PPOGRESS </h1>
           <p class="header-paragraph">
-           <a href="http://www.diezelnerds.org">  𝕕𝕚𝕖𝕫𝕖𝕝𝕟𝕖𝕣𝕕𝕤 </a> 
+           <a href="https://www.linkedin.com/in/wilfred-otieno-947807200/"> Mr.Apollon </a> 
           </p>
         </div>
         <img
-          src="images/air-balloon.png"
-          alt="Header Image"
-          class="header-image"
+          src=""
+          alt=""
+          class=""
         />
         <div class="logo">
           <h1>
-            <span class="center">D</span>
-            <span class="center">I</span>
-            <span class="center">E</span>
-            <span class="center">Z</span>
-            <span class="center">E</span>
+            <span class="center">A</span>
             <span class="center">L</span>
+            <span class="center">A</span>
+            <span class="center">P</span>
+            <span class="center">O</span>
+            <span class="center">L</span>
+            <span class="center">L</span>
+            <span class="center">O</span>
             <span class="center">N</span>
-            <span class="center">E</span>
-            <span class="center">R</span>
-            <span class="center">D</span>
-            <span class="center">S</span>
+          >
           </h1>
         </div>
       </header>
